[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stealth_drive_zestycat"
version = "0.0.1"
authors = [
  { name="Greg Bizup", email="g.bizup@gmail.com" },
]
description = "Bundled functionality for stealthy web scraping"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zestycat/stealth-drive"
"Bug Tracker" = "https://github.com/zestycat/stealth-drive/issues"
